--- a/photos/index.html
+++ b/photos/index.html
@@ -33,26 +33,26 @@
 <div class="flex ">
     <div class="flex-auto p2">
         <img src="/images/IMG1.jpg" class="mb2 rounded" />
-        <h1 class="h2 mt0">(づ￣ ³￣)づ</h1>
+        <h1 class="h2 mt0">🦋 🌺 🌼</h1>
         <p class="mb0"></p>
     </div>
     <div class="flex-auto p2">
         <img src="/images/IMG2.jpg" class="mb2 rounded" />
-        <h1 class="h2 mt0">(｀◔ ω ◔´)</h1>
-        <p class="mb0"></p>
+        <h1 class="h2 mt0"></h1>
+        <p class="mb0">🦋 🌺 🌼</p>
     </div>
 </div>
 
 <div class="flex mb4">
     <div class="flex-auto p2">
         <img src="/images/IMG3.jpg" class="mb2 rounded" />
-        <h1 class="h2 mt0">（<em>´▽｀</em>）</h1>
+        <h1 class="h2 mt0">🦋 🌺 🌼</h1>
         <p class="mb0"></p>
     </div>
     <div class="flex-auto p2">
         <img src="/images/IMG4.jpg" class="mb2 rounded" />
         <h1 class="h2 mt0"></h1>
-        <p class="mb0">♡o｡.(✿ฺ｡ ✿ฺ)️</p>
+        <p class="mb0">🦋 🌺 🌼️</p>
     </div>
 </div>
 </div>
