--- a/profile/index.html
+++ b/profile/index.html
@@ -35,7 +35,7 @@
         <img src="/images/profile.jpg" width="120" height="120" class="mb2 circle" />
         <h1 class="h2 mt0">fernButterfly</h1>
         <p class="mb0">web developer</p>
-        <p class="mb0">(｡´ ‿｀♡)</p>
+        <p class="mb0">🦋 🌺 🌼</p>
   </div>
 </div>
 <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/></p>
